<resources>
    <string name="app_name">诗仙</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="search">搜索</string>
    <string name="remembered">已背</string>
    <string name="user">用户</string>
    <string name="logo_desp">诗词大会</string>
    <string name="login_tip">登录</string>
    <string name="user_email">  用户邮箱</string>
    <string name="password">  密码</string>
    <string name="remember_me">记住密码</string>
    <string name="login">登录</string>
    <string name="preference_key">user</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="ok">确认</string>
    <string name="searchcontent">搜索内容</string>
    <string name="username">用户名</string>
    <string name="finish">完成</string>
    <string name="next_poetry">下一首诗</string>
    <string name="returnback">返回</string>
    <string name="look">查看</string>
    <string name="clear">清空</string>
    <string name="choice_prompt">请按正确顺序依次点击下列诗句</string>
    <string name="consist_prompt">请从下列文字中选择部分文字组成一句正确的诗句</string>
</resources>
