<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:contentDescription="@string/logo_desp"
            android:scaleType="fitXY"
            android:src="@mipmap/icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12sp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:text="@string/login_tip"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_email"
                android:ems="20"
                android:hint="@string/user_email"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email_layout"
                android:ems="20"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switch_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:checked="false"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:minHeight="56sp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:background="@mipmap/frame"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/forgetpassword"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:id="@+id/register" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:id="@+id/forget_password" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
