<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="126sp"
            android:layout_height="126sp"
            android:contentDescription="@string/logo_desp"
            android:scaleType="fitXY"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_newemail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_newemail"
                android:ems="20"
                android:hint="@string/user_email"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email_layout"
                android:ems="20"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email_layout"
                android:ems="20"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:minHeight="56sp"
            android:text="@string/register"
            android:background="@mipmap/frame"
            android:layout_gravity="center"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
