<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bkground3"
    android:weightSum="1">

    <TextView
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/consist_prompt"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:id="@+id/consist_prompt"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/et_consit"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_border2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/consist_content"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="97dp"
            android:layout_height="67dp"
            android:text="@string/returnback"
            android:background="@mipmap/frame3"
            android:id="@+id/finish_consist" />

        <Button
            android:layout_width="97dp"
            android:layout_height="67dp"
            android:text="@string/ok"
            android:background="@mipmap/frame3"
            android:id="@+id/submit_consist" />

        <Button
            android:layout_width="97dp"
            android:layout_height="67dp"
            android:text="@string/look"
            android:background="@mipmap/frame3"
            android:id="@+id/check_consist" />
    </LinearLayout>

    <TextView
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="10sp"
        android:id="@+id/consist_answer"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

</LinearLayout>